# Powerpoint

./: Dockerfile  Procfile  app.py  pyproject.toml  render.yaml  replit.md  requirements.txt
User-Interface/: app.py
User-Interface/templates/: index.html
static/: manifest.json  pwa-sw.js
templates/: index.html
