[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.41.0",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "gunicorn>=25.3.0",
    "requests>=2.33.1",
    "telethon>=1.43.1",
    "werkzeug>=3.1.8",
]
